# Connor-Writer

./: .gitignore  README.md  pyproject.toml
evidence/: sample-events.jsonl
examples/: context.json
src/connor_writer/: __init__.py  bank.py  cli.py  context.py  draft.py  families.py  gate.py  grounding.py  ledger.py  readout.py  readout_store.py  schema.py  scoring.py  subskill.py
tests/: test_lifecycle.py
