[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "connor-writer"
version = "0.1.0"
description = "Deterministic skill distillation and certification lifecycle for Connor."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
connor-writer = "connor_writer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

